[package]
name = "llhttp-sys"
version = "0.0.1"
authors = ["Jack Liar"]
description = "llhttp bindings for Rust"
edition = "2018"
keywords = ["http", "nodejs", "llhttp"]

[lib]
doctest=false

[dependencies]

[build-dependencies]
anyhow = "1.0.32"
log = "0.4"
env_logger = "0.7"
pkg-config = "0.3"

bindgen = { version = "0.54.1" }

[features]
static = []