[package]
name = "llhttp-sys"
version = "0.0.1"
authors = ["Jack Liar"]
description = "llhttp bindings for Rust"
edition = "2018"
keywords = ["http", "nodejs", "llhttp"]

[lib]
doctest = false

[dependencies]
libc = "0.2"

[build-dependencies]
anyhow = "1.0"
bindgen = { version = "0.59", optional = true }
env_logger = "0.9"
log = "0.4"
pkg-config = "0.3"

[features]
static = []
gen = ["bindgen"]
