[package]
name = "llhttp"
version = "0.1.0"
authors = ["Jack Liar"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-primitive-derive = "0.1.2"
num-traits = "0.2.11"

llhttp-sys = {version = "0.0.1", path = "../llhttp-sys"}
